--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang=en> 
 <head>
-  <title>My cool page</title>
-  <link href="styles.css" rel="stylesheet">
+  <title>Not my first web</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is my page</h1>
-    <p>and a paragraph!</p>
-    test commit 
-    try again
-
+  <nav class="About">
+    <h1>About me</h1>
+  <nav class="links">
+    <a class="link">No time</a>
+  </nav>
+  </nav>
 </html>
