--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
-<html lang=en> 
+<html lang="en">
 <head>
   <title>Not my first web</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <nav class="About">
     <h1>About me</h1>
-  <nav class="links">
-    <a class="link">No time</a>
+
+    <div class="links">
+      <a class="link" href="time.html">More Information</a>
+    </div>
   </nav>
-  </nav>
+
+  <div class="info-box">
+    <h1>Senthil</h1>
+  </div>
+  <div class="text">
+    <p>my name is Senthil.I live at Hutt central.I was born in india.I migrated here about 2 years ago.</p><br>
+    <p>I am interested in doing calculus and Python.I can calculate really fast with my mind.</p><br>
+    <p>I am a curious person who loves solving problems.My main sport i lacrosse (not so famous)</p><br>
+    <p>My favourite game is minecraft.My favourite song is STAY.I want to become a software developer</p><br>
+    <p>My favourite food is pizza and my favourite drink is sprite</p>
+  </div>
+
+</body>
 </html>
