--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
   <div class="info-box">
     <h1>Senthil</h1>
   </div>
+
   <div class="text">
-    <p>my name is Senthil.I live at Hutt central.I was born in india.I migrated here about 2 years ago.</p><br>
-    <p>I am interested in doing calculus and Python.I can calculate really fast with my mind.</p><br>
-    <p>I am a curious person who loves solving problems.My main sport i lacrosse (not so famous)</p><br>
-    <p>My favourite game is minecraft.My favourite song is STAY.I want to become a software developer</p><br>
-    <p>My favourite food is pizza and my favourite drink is sprite</p>
+    <p>My name is Senthil. I live at Hutt Central. I was born in India. I migrated here about 2 years ago.</p><br>
+    <p>I am interested in doing calculus and Python. I can calculate really fast with my mind.</p><br>
+    <p>I am a curious person who loves solving problems. My main sport is lacrosse (not so famous).</p><br>
+    <p>My favourite game is Minecraft. My favourite song is STAY. I want to become a software developer.</p><br>
+    <p>My favourite food is pizza and my favourite drink is Mountain Dew.</p>
   </div>
 
 </body>
