--- a/time.html
+++ b/time.html
@@ -6,19 +6,35 @@
     <link rel="stylesheet" href="style.css">
     <title>Extra Information</title>
 </head>
-<body>
+<body class="anime-page">
+
     <nav class="About">
-    <h1>Extra Information</h1>
+        <h1>Extra Information</h1>
     </nav>
+
     <div class="info-box">
-    <h1>Anime i like</h1>
-  </div>
-  <div class="images">
-  <img src="demonslayer.png">
-  <details>
-    <summary>Details</summary>
-    A story where the world is threatened by demon.<br>The protagonist's sister is turned into a demon.<br>Will the protagonist manage to change his sister back to normal or not
-  </details>
-  </div>
+        <h2>My Favourite Anime</h2>
+    </div>
+
+    <div class="two-boxes">
+
+        <div class="box">
+            <img src="demonslayer.png" alt="Demon Slayer">
+            <details>
+                <summary>More info</summary>
+                <p>(taken from google)The story follows Tanjiro Kamado, a kind-hearted teenager whose life is shattered when a demon kills his family and turns his younger sister, Nezuko, into a demon. To avenge his family and find a cure to turn Nezuko back into a human, Tanjiro joins the Demon Slayer Corps, an elite, secret organization dedicated to protecting humanity from man-eating demons</p>
+            </details>
+        </div>
+
+        <div class="box">
+            <img src="sololeveling.png" alt="Solo Leveling">
+            <details>
+                <summary>More info</summary>
+                <p>(taken from google)Sung Jinwoo is an E-rank hunter, infamously known as "the weakest weapon of humanity". He constantly risks his life in low-level dungeons to pay for his mother's medical bills.</p>
+            </details>
+        </div>
+
+    </div>
+
 </body>
 </html>
